--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -69,6 +69,10 @@
       <p>Recommended citation: {{ post.citation }}</p>
     {% elsif post.paperurl %}
       <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
+    {% elsif post.projecturl %}
+      <p><a href=" {{ post.projecturl }} ">Project Url</a></p>
+    {% elsif post.projecturl and post.paperurl %}
+      <p><a href="{{ post.paperurl }}">Download Paper</a> | <a href=" {{ post.projecturl }} ">Project Url</a></p>
     {% elsif post.slidesurl %}
       <p>Download <a href="{{ post.slidesurl }}">Download Slides</a></p></p>
     {% endif %}
