--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -70,9 +70,9 @@
     {% elsif post.paperurl %}
       <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
     {% elsif post.projecturl %}
-      <p><a href=" {{ post.projecturl }} ">Project Url</a></p>
+      <p><a href=" {{ post.projecturl }} ">Project Webpage</a></p>
     {% elsif post.projecturl and post.paperurl %}
-      <p><a href="{{ post.paperurl }}">Download Paper</a> | <a href=" {{ post.projecturl }} ">Project Url</a></p>
+      <p><a href="{{ post.paperurl }}">Download Paper</a> | <a href=" {{ post.projecturl }} ">Project Webpage</a></p>
     {% elsif post.slidesurl %}
       <p>Download <a href="{{ post.slidesurl }}">Download Slides</a></p></p>
     {% endif %}
