--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,19 +60,19 @@
     {% endif %}
     
     {% if post.citation and post.paperurl and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a href="{{ post.slidesurl }}">Download Slides</a></p>
+      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">📄Paper Link</a> | <a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% elsif post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a></p>
+      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">📄Paper Link</a></p>
     {% elsif post.citation and post.slidesurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }}</p>
     {% elsif post.paperurl %}
-      <p><a href=" {{ post.paperurl }} ">Download Paper</a></p>
+      <p><a href=" {{ post.paperurl }} ">📄Paper Link</a></p>
     {% elsif post.projecturl %}
       <p><a href=" {{ post.projecturl }} ">Project Webpage</a></p>
     {% elsif post.projecturl and post.paperurl %}
-      <p><a href="{{ post.paperurl }}">Download Paper</a> | <a href=" {{ post.projecturl }} ">Project Webpage</a></p>
+      <p><a href="{{ post.paperurl }}">📄Paper Link</a> | <a href=" {{ post.projecturl }} ">Project Webpage</a></p>
     {% elsif post.slidesurl %}
       <p>Download <a href="{{ post.slidesurl }}">Download Slides</a></p></p>
     {% endif %}
